apps/prometheus/k8s-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`prometheus.services.luke-domain.com`)
      services:
        - name: prometheus
          port: 80
